# fastapi-desafio

./: README.md  __init__.py  alembic.ini  pyproject.toml
src/: config.py  database.py  security.py
src/services/: transaction.py
src/utils/: security.py
test/: conftest.py  test_account.py
